--- a/minutes.html
+++ b/minutes.html
@@ -127,12 +127,78 @@
             }
         }
     </style>
-    <script>
+    <!-- Add Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
+        import { getDatabase, ref, push, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
+
+        // Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7Eg6VqWwPje0",
+            authDomain: "project-management-a1c5e.firebaseapp.com",
+            databaseURL: "https://project-management-a1c5e-default-rtdb.firebaseio.com/",
+            projectId: "project-management-a1c5e",
+            storageBucket: "project-management-a1c5e.appspot.com",
+            messagingSenderId: "662718236281",
+            appId: "1:662718236281:web:e859b39671aefa67e436a8",
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+
+        // Get elements from the DOM
+        const formContainer = document.getElementById('formContainer');
+        const taskForm = document.getElementById('taskForm');
+        const taskTableBody = document.getElementById('taskTableBody');
+
+        // Load tasks from Firebase
+        function loadTasks() {
+            const tasksRef = ref(db, 'tasks/');
+            onValue(tasksRef, (snapshot) => {
+                const data = snapshot.val();
+                const tasks = data ? Object.entries(data) : [];
+                updateTable(tasks);
+            });
+        }
+
+        // Save task to Firebase
+        function saveTask(task) {
+            const tasksRef = ref(db, 'tasks/');
+            const newTaskRef = push(tasksRef);
+            set(newTaskRef, task).then(() => {
+                console.log("Task saved to Firebase:", task);
+            }).catch((error) => {
+                console.error("Error saving task to Firebase:", error);
+            });
+        }
+
+        // Update task in Firebase
+        function updateTask(task, taskId) {
+            const taskRef = ref(db, `tasks/${taskId}`);
+            update(taskRef, task).then(() => {
+                console.log("Task updated in Firebase:", task);
+            }).catch((error) => {
+                console.error("Error updating task in Firebase:", error);
+            });
+        }
+
+        // Remove task from Firebase
+        function deleteTask(taskId) {
+            const taskRef = ref(db, `tasks/${taskId}`);
+            remove(taskRef).then(() => {
+                console.log("Task removed from Firebase:", taskId);
+            }).catch((error) => {
+                console.error("Error removing task from Firebase:", error);
+            });
+        }
+
+        // Toggle the form visibility
         function toggleForm() {
-            const formContainer = document.getElementById('formContainer');
             formContainer.style.display = formContainer.style.display === 'block' ? 'none' : 'block';
         }
 
+        // Handle form submission
         function addTask(event) {
             event.preventDefault();
 
@@ -140,42 +206,68 @@
             const taskPriority = document.getElementById('taskPriority').value;
 
             if (taskDescription && taskPriority) {
-                const tableBody = document.getElementById('taskTableBody');
+                const task = {
+                    description: taskDescription,
+                    priority: taskPriority,
+                    dateAdded: new Date().toLocaleDateString(),
+                    status: 'active'
+                };
 
-                const row = tableBody.insertRow();
-                row.insertCell(0).innerText = taskDescription;
-                row.insertCell(1).innerText = taskPriority;
-
-                const currentDate = new Date().toLocaleDateString();
-                row.insertCell(2).innerText = currentDate;
-
-                const actionCell = row.insertCell(3);
-                const completeButton = document.createElement('button');
-                completeButton.innerText = 'Mark as Completed';
-                completeButton.onclick = () => markAsCompleted(row);
-                actionCell.appendChild(completeButton);
-
-                document.getElementById('taskForm').reset();
+                saveTask(task);
+                taskForm.reset();
+                formContainer.style.display = 'none';
             } else {
                 alert('Please fill out all fields.');
             }
         }
 
-        function markAsCompleted(row) {
+        // Mark task as completed
+        function markAsCompleted(taskId, row) {
             row.classList.add('completed');
-            const actionCell = row.cells[3];
-            actionCell.innerHTML = 'Completed';
-
-            const deleteButton = document.createElement('button');
-            deleteButton.innerText = 'Delete';
-            deleteButton.style.marginLeft = '10px';
-            deleteButton.onclick = () => deleteTask(row);
-            actionCell.appendChild(deleteButton);
+            const updatedTask = {
+                ...tasks.find(task => task[0] === taskId)[1],
+                status: 'completed'
+            };
+            updateTask(updatedTask, taskId);
         }
 
-        function deleteTask(row) {
+        // Delete task
+        function deleteTaskRow(taskId, row) {
+            deleteTask(taskId);
             row.remove();
         }
+
+        // Update the table with tasks
+        function updateTable(tasks) {
+            taskTableBody.innerHTML = ''; // Clear the table
+
+            tasks.forEach(([taskId, task]) => {
+                const row = taskTableBody.insertRow();
+                row.insertCell(0).innerText = task.description;
+                row.insertCell(1).innerText = task.priority;
+                row.insertCell(2).innerText = task.dateAdded;
+
+                const actionCell = row.insertCell(3);
+                if (task.status === 'completed') {
+                    row.classList.add('completed');
+                    actionCell.innerText = 'Completed';
+                } else {
+                    const completeButton = document.createElement('button');
+                    completeButton.innerText = 'Mark as Completed';
+                    completeButton.onclick = () => markAsCompleted(taskId, row);
+                    actionCell.appendChild(completeButton);
+                }
+
+                const deleteButton = document.createElement('button');
+                deleteButton.innerText = 'Delete';
+                deleteButton.style.marginLeft = '10px';
+                deleteButton.onclick = () => deleteTaskRow(taskId, row);
+                actionCell.appendChild(deleteButton);
+            });
+        }
+
+        // Initial load of tasks from Firebase
+        loadTasks();
     </script>
 </head>
 
