--- a/Chris.html
+++ b/Chris.html
@@ -39,7 +39,8 @@
             overflow: hidden;
         }
 
-        th, td {
+        th,
+        td {
             text-align: left;
             padding: 12px;
             border-bottom: 1px solid #ddd;
@@ -72,7 +73,8 @@
             display: block;
         }
 
-        input, select {
+        input,
+        select {
             width: 100%;
             padding: 10px;
             margin-bottom: 15px;
@@ -82,7 +84,8 @@
             transition: border-color 0.3s;
         }
 
-        input:focus, select:focus {
+        input:focus,
+        select:focus {
             border-color: #007bff;
             outline: none;
         }
@@ -118,11 +121,14 @@
         }
 
         @media (max-width: 768px) {
-            table, .form-container {
+            table,
+            .form-container {
                 font-size: 14px;
             }
 
-            input, select, button {
+            input,
+            select,
+            button {
                 font-size: 14px;
             }
         }
@@ -148,126 +154,137 @@
         const db = getDatabase(app);
 
         // Get elements from the DOM
-        const formContainer = document.getElementById('formContainer');
-        const taskForm = document.getElementById('taskForm');
-        const taskTableBody = document.getElementById('taskTableBody');
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const formContainer = document.getElementById('formContainer');
+            const taskForm = document.getElementById('taskForm');
+            const taskTableBody = document.getElementById('taskTableBody');
 
-        // Load tasks from Firebase
-        function loadTasks() {
-            const tasksRef = ref(db, 'tasks/');
-            onValue(tasksRef, (snapshot) => {
-                const data = snapshot.val();
-                const tasks = data ? Object.entries(data) : [];
-                updateTable(tasks);
-            });
-        }
-
-        // Save task to Firebase
-        function saveTask(task) {
-            const tasksRef = ref(db, 'tasks/');
-            const newTaskRef = push(tasksRef);
-            set(newTaskRef, task).then(() => {
-                console.log("Task saved to Firebase:", task);
-            }).catch((error) => {
-                console.error("Error saving task to Firebase:", error);
-            });
-        }
-
-        // Update task in Firebase
-        function updateTask(task, taskId) {
-            const taskRef = ref(db, `tasks/${taskId}`);
-            update(taskRef, task).then(() => {
-                console.log("Task updated in Firebase:", task);
-            }).catch((error) => {
-                console.error("Error updating task in Firebase:", error);
-            });
-        }
-
-        // Remove task from Firebase
-        function deleteTask(taskId) {
-            const taskRef = ref(db, `tasks/${taskId}`);
-            remove(taskRef).then(() => {
-                console.log("Task removed from Firebase:", taskId);
-            }).catch((error) => {
-                console.error("Error removing task from Firebase:", error);
-            });
-        }
-
-        // Toggle the form visibility
-        function toggleForm() {
-            formContainer.style.display = formContainer.style.display === 'block' ? 'none' : 'block';
-        }
-
-        // Handle form submission
-        function addTask(event) {
-            event.preventDefault();
-
-            const taskDescription = document.getElementById('taskDescription').value;
-            const taskPriority = document.getElementById('taskPriority').value;
-
-            if (taskDescription && taskPriority) {
-                const task = {
-                    description: taskDescription,
-                    priority: taskPriority,
-                    dateAdded: new Date().toLocaleDateString(),
-                    status: 'active'
-                };
-
-                saveTask(task);
-                taskForm.reset();
-                formContainer.style.display = 'none';
-            } else {
-                alert('Please fill out all fields.');
+            // Load tasks from Firebase
+            function loadTasks() {
+                const tasksRef = ref(db, 'tasks/');
+                onValue(tasksRef, (snapshot) => {
+                    const data = snapshot.val();
+                    const tasks = data ? Object.entries(data) : [];
+                    updateTable(tasks);
+                });
             }
-        }
 
-        // Mark task as completed
-        function markAsCompleted(taskId, row) {
-            row.classList.add('completed');
-            const updatedTask = {
-                ...tasks.find(task => task[0] === taskId)[1],
-                status: 'completed'
-            };
-            updateTask(updatedTask, taskId);
-        }
+            // Save task to Firebase
+            function saveTask(task) {
+                const tasksRef = ref(db, 'tasks/');
+                const newTaskRef = push(tasksRef);
+                set(newTaskRef, task).then(() => {
+                    console.log("Task saved to Firebase:", task);
+                }).catch((error) => {
+                    console.error("Error saving task to Firebase:", error);
+                });
+            }
 
-        // Delete task
-        function deleteTaskRow(taskId, row) {
-            deleteTask(taskId);
-            row.remove();
-        }
+            // Update task in Firebase
+            function updateTask(task, taskId) {
+                const taskRef = ref(db, `tasks/${taskId}`);
+                update(taskRef, task).then(() => {
+                    console.log("Task updated in Firebase:", task);
+                }).catch((error) => {
+                    console.error("Error updating task in Firebase:", error);
+                });
+            }
 
-        // Update the table with tasks
-        function updateTable(tasks) {
-            taskTableBody.innerHTML = ''; // Clear the table
+            // Remove task from Firebase
+            function deleteTask(taskId) {
+                const taskRef = ref(db, `tasks/${taskId}`);
+                remove(taskRef).then(() => {
+                    console.log("Task removed from Firebase:", taskId);
+                }).catch((error) => {
+                    console.error("Error removing task from Firebase:", error);
+                });
+            }
 
-            tasks.forEach(([taskId, task]) => {
-                const row = taskTableBody.insertRow();
-                row.insertCell(0).innerText = task.description;
-                row.insertCell(1).innerText = task.priority;
-                row.insertCell(2).innerText = task.dateAdded;
-
-                const actionCell = row.insertCell(3);
-                if (task.status === 'completed') {
-                    row.classList.add('completed');
-                    actionCell.innerText = 'Completed';
+            // Toggle the form visibility
+            function toggleForm() {
+                if (formContainer.style.display === 'none') {
+                    formContainer.style.display = 'block';
                 } else {
-                    const completeButton = document.createElement('button');
-                    completeButton.innerText = 'Mark as Completed';
-                    completeButton.onclick = () => markAsCompleted(taskId, row);
-                    actionCell.appendChild(completeButton);
+                    formContainer.style.display = 'none';
                 }
+                console.log(`Form display toggled to: ${formContainer.style.display}`);
+            }
 
-                const deleteButton = document.createElement('button');
-                deleteButton.innerText = 'Delete';
-                deleteButton.style.marginLeft = '10px';
-                deleteButton.onclick = () => deleteTaskRow(taskId, row);
-                actionCell.appendChild(deleteButton);
-            });
-        }
+            // Handle form submission
+            function addTask(event) {
+                event.preventDefault();
 
-        // Initial load of tasks from Firebase
-        loadTasks();
+                const taskDescription = document.getElementById('taskDescription').value;
+                const taskPriority = document.getElementById('taskPriority').value;
+
+                if (taskDescription && taskPriority) {
+                    const task = {
+                        description: taskDescription,
+                        priority: taskPriority,
+                        dateAdded: new Date().toLocaleDateString(),
+                        status: 'active'
+                    };
+
+                    saveTask(task);
+                    taskForm.reset();
+                    formContainer.style.display = 'none';
+                } else {
+                    alert('Please fill out all fields.');
+                }
+            }
+
+            // Mark task as completed
+            function markAsCompleted(taskId, row) {
+                row.classList.add('completed');
+                const updatedTask = {
+                    ...tasks.find(task => task[0] === taskId)[1],
+                    status: 'completed'
+                };
+                updateTask(updatedTask, taskId);
+            }
+
+            // Delete task
+            function deleteTaskRow(taskId, row) {
+                deleteTask(taskId);
+                row.remove();
+            }
+
+            // Update the table with tasks
+            function updateTable(tasks) {
+                taskTableBody.innerHTML = ''; // Clear the table
+
+                tasks.forEach(([taskId, task]) => {
+                    const row = taskTableBody.insertRow();
+                    row.insertCell(0).innerText = task.description;
+                    row.insertCell(1).innerText = task.priority;
+                    row.insertCell(2).innerText = task.dateAdded;
+
+                    const actionCell = row.insertCell(3);
+                    if (task.status === 'completed') {
+                        row.classList.add('completed');
+                        actionCell.innerText = 'Completed';
+                    } else {
+                        const completeButton = document.createElement('button');
+                        completeButton.innerText = 'Mark as Completed';
+                        completeButton.onclick = () => markAsCompleted(taskId, row);
+                        actionCell.appendChild(completeButton);
+                    }
+
+                    const deleteButton = document.createElement('button');
+                    deleteButton.innerText = 'Delete';
+                    deleteButton.style.marginLeft = '10px';
+                    deleteButton.onclick = () => deleteTaskRow(taskId, row);
+                    actionCell.appendChild(deleteButton);
+                });
+            }
+
+            // Assign event listeners
+            document.querySelector('.toggle-button').addEventListener('click', toggleForm);
+            taskForm.addEventListener('submit', addTask);
+
+            // Initial load of tasks from Firebase
+            loadTasks();
+        });
     </script>
 </head>
 
@@ -275,15 +292,15 @@
     <div class="container">
         <h1>Task Sheet</h1>
 
-        <button class="toggle-button" onclick="toggleForm()">Add Task Form</button>
+        <button class="toggle-button">Add Task Form</button>
 
         <div class="form-container" id="formContainer">
-            <form id="taskForm" onsubmit="addTask(event)">
+            <form id="taskForm">
                 <label for="taskDescription">Task Description:</label>
-                <input type="text" id="taskDescription" placeholder="Enter task description">
+                <input type="text" id="taskDescription" placeholder="Enter task description" required>
 
                 <label for="taskPriority">Priority:</label>
-                <select id="taskPriority">
+                <select id="taskPriority" required>
                     <option value="High">High</option>
                     <option value="Medium">Medium</option>
                     <option value="Low">Low</option>
